@@ -6,7 +6,7 @@ import gnu.mapping.*;
 
 /** A collection of MethodProcs;  one is chosen at apply time. */
 
-public class GenericProc extends ProcedureN
+public class GenericProc extends MethodProc
 {
   MethodProc[] methods;
   int count;
@@ -49,5 +49,52 @@ public class GenericProc extends ProcedureN
           return method.applyV(vars);
       }
     throw new WrongType(this, WrongType.ARG_UNKNOWN, null);
+  }
+
+  public Object getVarBuffer()
+  {
+    // First element points to selected method, second to that method's args.
+    return new Object[2];
+  }
+
+  public int isApplicable(Expression[] args)
+  {
+    int best = 0;
+    for (int i = count;  --i >= 0; )
+      {
+        MethodProc method = methods[i];
+        int result = method.isApplicable(args);
+        if (result == 2)
+          return 2;
+        if (result == 1)
+          best = 1;
+      }
+    return best;
+  }
+
+  public RuntimeException match (Object vars, Object[] args)
+  {
+    RuntimeException ex = null;
+    for (int i = count;  --i >= 0; )
+      {
+        MethodProc method = methods[i];
+        Object mvars = method.getVarBuffer();
+        ex = method.match(mvars, args);
+        if (ex == null)
+          {
+            ((Object[]) vars)[0] = method;
+            ((Object[]) vars)[1] = mvars;
+            return null;
+          }
+      }
+    if (count == 1)
+      return ex;
+    return new WrongType(this, WrongType.ARG_UNKNOWN, null);
+  }
+
+  public Object applyV(Object vars)
+  {
+    Object[] arr = (Object[]) vars;
+    return ((MethodProc) arr[0]).applyV(arr[1]);
   }
 }
